--- a/gitops/nginx/service-c/deployment.yaml
+++ b/gitops/nginx/service-c/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: service-c
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: service-c
   replicas: 2
   template:
     metadata:
       labels:
-        app: nginx
+        app: service-c
     spec:
       containers:
-      - name: nginx
+      - name: service-c
         image: nginx:latest
         # securityContext:
         #   allowPrivilegeEscalation: false
