--- a/gitops/nginx/service-c/service.yaml
+++ b/gitops/nginx/service-c/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: service-c
 spec:
   selector:
-    app: nginx
+    app: service-c
   ports:
     - protocol: TCP
       port: 80
