--- a/performance/gitops/go-toolset/deployment.yaml
+++ b/performance/gitops/go-toolset/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: go-toolset
-        image: registry.redhat.io/ubi9/go-toolset:latest
+        image: hello-world:latest
         ports:
         - containerPort: 8080
