--- a/performance/gitops/hello-api/service.yaml
+++ b/performance/gitops/hello-api/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: go-toolset
+  name: hello-api
 spec:
   selector:
-    app: go-toolset
+    app: hello-api
   ports:
     - protocol: TCP
       port: 8080
