--- a/performance/gitops/apps/app-1.yaml
+++ b/performance/gitops/apps/app-1.yaml
@@ -1,6 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  annotations:
+    notifications.argoproj.io/subscribe.on-sync-succeeded.form: ""
   name: 'app-1'
   namespace: openshift-gitops
 spec:
