--- a/gitops/test/job.yaml
+++ b/gitops/test/job.yaml
@@ -4,6 +4,8 @@ metadata:
   name: job
   annotations:
     argocd.argoproj.io/sync-wave: "5"
+    argocd.argoproj.io/hook: Sync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   backoffLimit: 0
   template:
